# esp32-smarterbutton

./: .gitignore  CMakeLists.txt  LICENSE  README.md  esp_idf_project_configuration.json  sdkconfig.credentials  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.devboard  sdkconfig.release  sdkconfig.smartbutton
.devcontainer/: Dockerfile  devcontainer.json
components/smartbutton_battery_level/: CMakeLists.txt  Kconfig  smartbutton_battery_level.c
components/smartbutton_battery_level/include/: smartbutton_battery_level.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
openocd/: esp32-ft2232hl-to-jtag.cfg  esp32-ft4232hl-to-jtag.cfg  esp32-s3-builtin-usb-to-jtag.cfg
openocd/interface/: ft2232hl-dual-channel-4-wires-jtag.cfg  ft2232hl-dual-channel-full-jtag.cfg  ft4232hl-quad-channel-4-wires-jtag.cfg
